[package]
name = "wasm_light_node"
version = "0.1.0"
edition = "2021"
description = "Certificate Transparency Checker - Rust/WASM"
license = "MIT"
repository = "https://github.com/your-repo/ct_checker_extension"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
lto = true
opt-level = "s"
